// See README.txt for information and build instructions.
//
// Note: START and END tags are used in comments to define sections used in
// tutorials.  They are not part of the syntax for Protocol Buffers.
//
// To get an in-depth walkthrough of this file and the related examples, see:
// https://developers.google.com/protocol-buffers/docs/tutorials

// [START declaration]
package ProtoBuf_Profile;
// [END declaration]

// [START messages]
enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
}

message PhoneNumber {
    optional string number = 1;
    optional PhoneType type = 2;
}
message Person {
    optional string name = 1;
    optional int32 id = 2;  // Unique ID number for this person.
    optional string email = 3;
    repeated PhoneNumber phones = 4;
}

// Our address book file is just one of these.
message AddressBook {
    repeated Person people = 1;
}
// [END messages]
